--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
 
     <!-- Open Graph / Facebook / WhatsApp Preview -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://your-website-url.com/"> <!-- GANTI INI SETELAH DEPLOY -->
+    <meta property="og:url" content="https://azfaribn.github.io/portfolio/"> <!-- GANTI INI SETELAH DEPLOY -->
     <meta property="og:title" content="Almi Yudianto | Creative Developer Portfolio">
     <meta property="og:description" content="Discover the web projects, digital creations, and creative services of Almi Yudianto.">
-    <meta property="og:image" content="https://your-website-url.com/path-to-your-preview-image.jpg"> 
+    <meta property="og:image" content="https://azfaribn.github.io/portfolio/office-desk.jpg"> 
 
     <!-- Twitter Card -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://your-website-url.com/"> 
+    <meta property="twitter:url" content="https://azfaribn.github.io/portfolio/"> 
     <meta property="twitter:title" content="Almi Yudianto | Creative Developer Portfolio">
     <meta property="twitter:description" content="Discover the web projects, digital creations, and creative services of Almi Yudianto.">
-    <meta property="twitter:image" content="https://your-website-url.com/path-to-your-preview-image.jpg"> 
+    <meta property="twitter:image" content="https://azfaribn.github.io/portfolio/office-desk.jpg"> 
     
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -591,3 +591,4 @@
     </script>
 </body>
 </html>
+
