--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@
                 </div>
                 <div class="flex items-center gap-2">
                     <i class="fa-solid fa-envelope text-cyan-500"></i>
-                    <span>azfaribn@gmail.com</span> <!-- Placeholder email based on username -->
+                    <span>artgraphicapro@gmail.com</span> <!-- Placeholder email based on username -->
                 </div>
             </div>
 
@@ -591,4 +591,5 @@
     </script>
 </body>
 </html>
+
 
