--- a/index.html
+++ b/index.html
@@ -376,6 +376,10 @@
                             <i class="fa-brands fa-facebook text-2xl mb-1 group-hover:text-white"></i>
                             <div class="text-xs text-gray-400 group-hover:text-white">FB</div>
                         </a>
+                        <a href="https://threads.com/@azfaribn" class="p-4 rounded-lg bg-gray-800 hover:bg-black transition-all group">
+                            <i class="fa-brands fa-threads text-2xl mb-1 group-hover:text-white"></i>
+                            <div class="text-xs text-gray-400 group-hover:text-white">X</div>
+                        </a>
                         <a href="https://youtube.com/azfaribn" class="p-4 rounded-lg bg-gray-800 hover:bg-red-600 transition-all group">
                             <i class="fa-brands fa-youtube text-2xl mb-1 group-hover:text-white"></i>
                             <div class="text-xs text-gray-400 group-hover:text-white">YT</div>
@@ -591,5 +595,6 @@
     </script>
 </body>
 </html>
+
 
 
