--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
                         </a>
                         <a href="https://threads.com/@azfaribn" class="p-4 rounded-lg bg-gray-800 hover:bg-black transition-all group">
                             <i class="fa-brands fa-threads text-2xl mb-1 group-hover:text-white"></i>
-                            <div class="text-xs text-gray-400 group-hover:text-white">X</div>
+                            <div class="text-xs text-gray-400 group-hover:text-white">Threads</div>
                         </a>
                         <a href="https://youtube.com/azfaribn" class="p-4 rounded-lg bg-gray-800 hover:bg-red-600 transition-all group">
                             <i class="fa-brands fa-youtube text-2xl mb-1 group-hover:text-white"></i>
@@ -595,6 +595,7 @@
     </script>
 </body>
 </html>
+
 
 
 
