--- a/index.html
+++ b/index.html
@@ -228,10 +228,10 @@
                     <div class="absolute top-0 right-0 p-3 opacity-20 group-hover:opacity-100 transition-opacity">
                         <i class="fa-solid fa-leaf text-4xl text-emerald-400"></i>
                     </div>
-                    <h3 class="text-2xl font-bold mb-2 text-white group-hover:text-emerald-300 transition-colors">HerbaFlow</h3>
-                    <p class="text-gray-400 mb-4 text-sm lang-en">Herbal information or health platform.</p>
-                    <p class="text-gray-400 mb-4 text-sm lang-id">Platform informasi herbal atau kesehatan.</p>
-                    <a href="https://herbaflow.vercel.app/" target="_blank" class="text-emerald-400 hover:text-white font-semibold inline-flex items-center">
+                    <h3 class="text-2xl font-bold mb-2 text-white group-hover:text-emerald-300 transition-colors">Digital Invitation</h3>
+                    <p class="text-gray-400 mb-4 text-sm lang-en">Elegant digital invitation website.</p>
+                    <p class="text-gray-400 mb-4 text-sm lang-id">Website undangan digital yang elegan.</p>
+                    <a href="https://invitation-nikah.netlify.app/" target="_blank" class="text-emerald-400 hover:text-white font-semibold inline-flex items-center">
                         <span class="lang-en">Visit Site</span><span class="lang-id">Kunjungi Situs</span> <i class="fa-solid fa-external-link-alt ml-2"></i>
                     </a>
                 </div>
@@ -265,8 +265,8 @@
                         <i class="fa-solid fa-heart text-4xl text-pink-400"></i>
                     </div>
                     <h3 class="text-2xl font-bold mb-2 text-white group-hover:text-pink-300 transition-colors">Undangan Resepsi</h3>
-                    <p class="text-gray-400 mb-4 text-sm lang-en">Elegant digital invitation website.</p>
-                    <p class="text-gray-400 mb-4 text-sm lang-id">Website undangan digital yang elegan.</p>
+                    <p class="text-gray-400 mb-4 text-sm lang-en">Elegant minimalist digital invitation website.</p>
+                    <p class="text-gray-400 mb-4 text-sm lang-id">Website undangan digital minimalis yang elegan.</p>
                     <a href="https://undangan-resepsi.netlify.app/" target="_blank" class="text-pink-400 hover:text-white font-semibold inline-flex items-center">
                         <span class="lang-en">Visit Site</span><span class="lang-id">Kunjungi Situs</span> <i class="fa-solid fa-external-link-alt ml-2"></i>
                     </a>
@@ -595,6 +595,7 @@
     </script>
 </body>
 </html>
+
 
 
 
